fixed collapsed menu  layout changes for smaller screens

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -19,40 +19,17 @@
     /* Legacy iOS */
 }
 
-@media (min-width: 992px) {
-
-    .navbar,
-    .navbar-collapse {
-        flex-direction: column;
-        font-weight: bold;
-
-    }
-
-    .navbar-expand-lg .navbar-nav {
-        flex-direction: column;
-    }
-
-    .navbar {
-        margin-top: 50px;
-        width: 100%;
-        height: 300px;
-        align-items: flex-start;
-    }
-
-    .navbar-brand {
-        margin-left: 0.5em;
-        padding-bottom: 0;
-        border-bottom: 4px solid #464646;
-    }
-
-    form input {
-        margin-bottom: 0.7em;
-    }
-
-    .nav-link {
-        color: rgba(250, 145, 20);
-    }
+.navbar .container-fluid, 
+.navbar-expand-md .navbar-collapse, 
+.navbar-expand-md .navbar-nav{
+  flex-direction: column;
+  align-items: flex-start;
 }
+
+.nav-link {
+    color: rgba(250, 145, 20);
+}
+
 
 table {
     border-collapse:collapse;
@@ -83,30 +60,40 @@ td:first-child, th:first-child {
     vertical-align: middle;
 }
 
+
 .custom-language-line {
     text-align: right;
     vertical-align: middle;
 }
 
 .custom-internetnl-badge {
-    transform: scale(0.7);
+    width: 160px;
 }
 
 
 .navbar-toggler-icon {
     background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z"/></svg>');
 }
-
-.custom-background-image {
-    background-image: url('/static/images/wrapper_header_bg.jpg');
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: contain;
+@media only screen and (min-width: 900px) {
+    .custom-background-image {
+        background-image: url('/static/images/wrapper_header_bg.jpg');
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .custom-nav-rounded-border {
+        background-color: white;
+    }
+}
+@media only screen and (min-width: 900px) {
+    .custom-nav-rounded-border {
+        background-color: rgba(48, 64, 77);
+    }
+    
 }
 
-.custom-nav-rounded-border {
-    background-color: rgba(48, 64, 77);
-}
 
 .custom-notVisible {
     visibility: hidden;
@@ -137,11 +124,9 @@ td:first-child, th:first-child {
 }
 
 #content {
-    margin-top: 70px;
     color: black;
     /*position: absolute;
     left: calc(50vw - 500px);*/
-    width: 700px;
     height: 550px;
     max-height: 550px;
     border-radius: 10px;
